# syscall_intercept

./: .gitignore  .travis.yml  CMakeCache.txt  CMakeLists.txt  LICENSE  README.md  codecov.yml  libsyscall_intercept.pc.in  syscall_intercept.spec  travis_prepare_docker.sh  travis_simple_build.sh  version.map
.github/workflows/: cmake.yml  main.yml
cmake/: cmake_uninstall.cmake.in  find_capstone.cmake  test_header.h  toolchain_features.cmake
debian/: changelog  control  copyright  libsyscall-intercept-dev.install  libsyscall-intercept-dev.lintian-overrides  libsyscall-intercept0.install  libsyscall-intercept0.lintian-overrides  rules
doc/: .CMakeLists.txt.swp  CMakeLists.txt  default.man  libsyscall_intercept.3.md
examples/: CMakeLists.txt  example.c  example_enclaves.c  example_enclaves_tls.c  example_open.c  example_open_return_syscall.c  example_openat_printer.c  fork_ban.c  icap.c  intercept.log-32188  mock_sysexecutor  mock_sysexecutor.c  signal_interceptor.c  signaller.c  socket_test  socket_test.c  socket_testclea  syscall_desc.c  syscall_desc.h  syscall_logger.c  test_example_ls  test_example_ls.c  test_sycall  test_sycall.c  tester_enclave  tester_enclave.c  tester_ls  tester_ls.c  tester_open  tester_open.c  tester_read  tester_read.c  tester_socket  tester_socket.c  tester_socket2  tester_socket2.c  tester_socket3  tester_socket3.c  tester_socket4  testety
include/: libsyscall_intercept_hook_point.h
src/: asm_wrapper.md  capstone_wrapper.h  cmdline_filter.c  cpp_compile_mock.c  cpp_compile_test.cc  disasm_wrapper.c  disasm_wrapper.h  entry.c  intercept.c  intercept.h  intercept_desc.c  intercept_log.c  intercept_log.h  intercept_template.s  intercept_util.c  intercept_util.h  intercept_wrapper.S  intercept_wrapper.s  libsyscall_intercept.map  magic_syscalls.c  magic_syscalls.h  patcher.c  syscall_formats.c  syscall_formats.h  syscall_no_intercept.s  util.s
test/: CMakeLists.txt  asm_pattern.c  check.cmake  check_filter.cmake  check_log.cmake  executable_with_syscall.S  filter_test.c  fork_logging.c  hook_test.c  hook_test_clone_preload.c  hook_test_data.h  hook_test_preload.c  intercept_sys_write.c  libcintercept0.log.match  libcintercept0_child.log.match  libcintercept1.log.match  libcintercept2.log.match  libcintercept3.log.match  logging_test.c  match.pl  mock_trampoline_table.S  mock_trampoline_table.s  nosyscall.in.S  nosyscall.in.s  nosyscall.out.S  nosyscall.out.s  pattern1.in.S  pattern1.in.s  pattern1.out.S  pattern1.out.s  pattern2.in.S  pattern2.in.s  pattern2.out.S  pattern2.out.s  pattern3.in.S  pattern3.in.s  pattern3.out.S  pattern3.out.s  pattern4.in.S  pattern4.in.s  (+89 more)
utils/: build-deb.sh  build-rpm.sh  check_whitespace.pl  cstyle.pl  match.pl
utils/check_license/: check-headers.sh  check-license.c  file-exceptions.sh
utils/docker/: build.sh  prepare-environment.sh  pull-or-rebuild-image.sh  run-build-package.sh  run-build.sh  run-coverage.sh  run-coverity.sh
utils/docker/images/: Dockerfile.fedora-25  Dockerfile.ubuntu-16.04  build-capstone.sh  build-image.sh  build-pmemfile.sh  install-nvml.sh  push-image.sh
